<?xml version="1.0"?>
<package format="2">
  <name>image_detection</name>
  <version>0.0.0</version>
  <description>The image_detection package</description>

  <maintainer email="yule2018@gmail.com">yusanshi</maintainer>

  <license>MIT</license>
  <depend>autoware_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
